--- a/source/example-smart-app/launch.html
+++ b/source/example-smart-app/launch.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Example-SMART-App</title>
   </head>
-  Loading...
+  Loading...testing
   <body>
     <script src='./lib/fhir-client.js'></script>
     <script>
       FHIR.oauth2.authorize({
-        'client_id': '6c12dff4-24e7-4475-a742-b08972c4ea27', //'df7c5a17-52dd-4c88-8a32-cdfb557ba758',
+        'client_id': '6c12dff4-24e7-4475-a742-b08972c4ea27',
         'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'
       });
     </script>
